# try-haskell

./: .gitignore  README.md  cabal.project  flake.nix
.devcontainer/: devcontainer.json
.direnv/: flake-profile-1-link
001-basics/: CHANGELOG.md  README.md  x001-basics.cabal
001-basics/src/: Lesson.hs
001-basics/test/: Main.hs
001-helloworld/: CHANGELOG.md  x001-helloworld.cabal
001-helloworld/app/: Main.hs
002-foobar/: CHANGELOG.md  x002-foobar.cabal
002-types-and-typeclasses/: CHANGELOG.md  LICENSE  README.md  x002-types-and-typeclasses.cabal
002-types-and-typeclasses/src/: Lesson.hs
002-types-and-typeclasses/test/: Main.hs
003-modules-and-project/: CHANGELOG.md  README.md  x003-modules-and-project.cabal
003-modules-and-project/src/: Lesson.hs
003-modules-and-project/src/Lesson/: Stats.hs
003-modules-and-project/src/Lesson/Internal/: Numeric.hs
003-modules-and-project/test/: Main.hs
004-testing/: CHANGELOG.md  README.md  x004-testing.cabal
004-testing/src/: Lesson.hs
004-testing/test/: Main.hs
005-functor/: CHANGELOG.md  README.md  x005-functor.cabal
005-functor/src/: Lesson.hs
005-functor/test/: Main.hs
006-applicative/: CHANGELOG.md  README.md  x006-applicative.cabal
006-applicative/src/: Lesson.hs
006-applicative/test/: Main.hs
007-monad/: CHANGELOG.md  README.md  x007-monad.cabal
007-monad/src/: Lesson.hs
007-monad/test/: Main.hs
008-foldable-traversable-monoid/: CHANGELOG.md  README.md  x008-foldable-traversable-monoid.cabal
008-foldable-traversable-monoid/src/: Lesson.hs
008-foldable-traversable-monoid/test/: Main.hs
009-monads-in-practice/: CHANGELOG.md  README.md  x009-monads-in-practice.cabal
009-monads-in-practice/src/: Lesson.hs
009-monads-in-practice/test/: Main.hs
010-monad-transformers/: CHANGELOG.md  README.md  x010-monad-transformers.cabal
010-monad-transformers/src/: Lesson.hs
010-monad-transformers/test/: Main.hs
011-io-and-exceptions/: CHANGELOG.md  README.md  x011-io-and-exceptions.cabal
011-io-and-exceptions/src/: Lesson.hs
011-io-and-exceptions/test/: Main.hs
012-concurrency/: CHANGELOG.md  README.md  x012-concurrency.cabal
012-concurrency/src/: Lesson.hs
012-concurrency/test/: Main.hs
013-strings-and-performance/: CHANGELOG.md  README.md  x013-strings-and-performance.cabal
013-strings-and-performance/src/: Lesson.hs
013-strings-and-performance/test/: Main.hs
014-ecosystem-and-idioms/: CHANGELOG.md  README.md  x014-ecosystem-and-idioms.cabal
014-ecosystem-and-idioms/src/: Lesson.hs
014-ecosystem-and-idioms/test/: Main.hs
