cabal-version:      3.0
name:               x004-testing
version:            0.1.0.0
synopsis:           Lesson 004 - Hspec, QuickCheck, tasty
license:            BSD-3-Clause
license-file:       LICENSE
author:             tmtmtoo
maintainer:         tmtmt2209@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lesson
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite x004-testing-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        hspec ^>=2.11,
        QuickCheck >=2.14,
        x004-testing
    default-language: Haskell2010
