cabal-version:      3.0
name:               x008-foldable-traversable-monoid
version:            0.1.0.0
synopsis:           Lesson 008 - Semigroup, Monoid, Foldable, Traversable
license:            BSD-3-Clause
license-file:       LICENSE
author:             tmtmtoo
maintainer:         tmtmt2209@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lesson
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite x008-foldable-traversable-monoid-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        hspec ^>=2.11,
        x008-foldable-traversable-monoid
    default-language: Haskell2010
