cabal-version:      3.0
name:               x013-strings-and-performance
version:            0.1.0.0
synopsis:           Lesson 013 - Text/ByteString, lazy evaluation, strictness
license:            BSD-3-Clause
license-file:       LICENSE
author:             tmtmtoo
maintainer:         tmtmt2209@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lesson
    build-depends:
        base ^>=4.20.2.0,
        bytestring ^>=0.12,
        containers ^>=0.7,
        text ^>=2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite x013-strings-and-performance-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        hspec ^>=2.11,
        bytestring ^>=0.12,
        containers ^>=0.7,
        text ^>=2.1,
        x013-strings-and-performance
    default-language: Haskell2010
